egonlang-core/res/examples/invalid/let_decl_without_assign.eg
let a;

// out: SyntaxError: let `a` missing value and type. lets require at least a type or declared with a value